<resources>
    <string name="app_name">ScanMed</string>
    <string name="en_TV_username">Username</string>
    <string name="en_TV_mail">Email</string>
    <string name="en_TV_password">Password</string>
    <string name="en_CheckBox1">I accept that the information entered will be used to manage my account and notify me of any changes in the status of my reports, in accordance with our privacy policy.</string>
    <string name="en_CheckBox2">I accept to receive updates to my reports by email.</string>
    <string name="en_Signin">Sign In</string>
    <string name="en_TV_question">You have an account ?</string>
    <string name="en_TV_login">Log in</string>
    <string name="en_loading">Loading ...</string>
    <string name="help_center">Help Center</string>
    <string name="hello">Hello, how can we help you ?</string>
    <string name="topic">Topic</string>
    <string name="account">Account</string>
    <string name="reset_password">Reset password</string>
    <string name="change_language">Change language</string>
    <string name="edit_and_delete_account">Edit and delete account</string>
    <string name="email_management">Email management</string>
    <string name="report_nmanagement">Report \nmanagement</string>
    <string name="edit_a_report">Edit a report</string>
    <string name="delete_a_report">Delete a report</string>
    <string name="technical_support">Technical support  \n&amp; Contact</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="report_a_security_vulnerability">Report a security vulnerability</string>
    <string name="contact_support">Contact Support</string>
    <string name="guide">Guide</string>
    <string name="welcome">Welcome to Scan Med !</string>
    <string name="description">Simple and practical, ScanMed is the best solution   for reporting a shortage of medications in   pharmacies near you.</string>
    <string name="summary">SUMMARY</string>
    <string name="summary_1">1. Report a medication</string>
    <string name="summary_2">2. View your report history</string>
    <string name="summary_3">3. Change your account settings</string>
    <string name="summary_4">4. Acquire help</string>
    <string name="pls_click">Please click on any of the titles to be redirected</string>
    <string name="report_a_medication">1. Report a medication</string>
    <string name="click_on_the_button">● Click on the <b>“+”</b> button at the bottom of the home page.</string>
    <string name="choose_a_method">● Choose a method to identify the medication in short supply :</string>
    <string name="document_directly_download">● <b>Document </b>: Directly download the DataMatrix present on a PDF document.</string>
    <string name="scan_the_datamatrix">● <b>Scan</b> : Scan the DataMatrix on the medication box using the camera.</string>
    <string name="enter_the_cip_code">● <b>CIP</b> : Enter the CIP code found on the medication box.</string>
    <string name="select_the_pharmacy">● Select the pharmacy where the medication is in short supply.</string>
    <string name="check_the_description">● Check the description of the medication and the selected pharmacy one last time.</string>
    <string name="send_your_report">● Send your report.</string>
    <string name="there_you_go">● There you go !</string>
    <string name="view_your_report_history">2. View your report history</string>
    <string name="click_on_the_history_button">● Click on the <b>“History”</b> button at the bottom of the home page.</string>
    <string name="view_the_processing">● View the processing status of your reports in real time.</string>
    <string name="different_statuses_can_be_given_to_a_report">Different statuses can be given to a report :</string>
    <string name="canceled_your_report"><b><font color="#FF0000">● “Canceled” </font></b>: Your report has not been confirmed by the administrator.</string>
    <string name="in_restocking"><b><font color="#EBCD30">● “In restocking”</font></b>: The restocking process for the medication you reported is in progress.</string>
    <string name="restocked_the_medication"><b><font color="#53C31B">● “Restocked”</font></b>: The medication you reported is now available in the pharmacy !</string>
    <string name="change_your_account_settings">3. Change your account settings</string>
    <string name="click_on_the_settings_button">● Click on the <b>“Settings”</b> button in the middle of the home page.</string>
    <string name="acquire_help">4. Acquire help</string>
    <string name="click_on_the_button_in_the_middle">● Click on the <b>“?”</b> button in the middle of the home page.</string>
    <string name="find_an_item_that_meets_your_needs">● Find an item that meets your needs.</string>
    <string name="if_you_do_not_find">● If you do not find a satisfactory answer there, you can contact the ScanMed administrator by clicking on “Contact Support”.</string>
    <string name="verification_your_report"><b><font color="#3054EB">● “Verification”</font></b>: Your report is being verified by the ScanMed administrator.</string>
    <string name="reset_password_order">Saisissez l’adresse email rattachée à votre compte afin que nous puissions vous transmettre les instructions pour réinitialiser votre mot de passe.</string>
    <string name="mail_hint">Saisissez votre adresse email</string>
    <string name="remember_password">Vous vous souvenez de votre mot de passe ? </string>
    <string name="login">Connexion</string>
    <string name="ask_reset_password">Demander la réinitialisation</string>
    <string name="create_password">Créer un nouveau mot de passe</string>
    <string name="create_password_order">Créer un nouveau mot de passer pour vous connecter et accéder à ScanMed.</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="new_password_order">Votre mot de passe doit avoir au moins 8 caractères et doit contenir des lettres minuscules, des lettres majuscules, des chiffres et des caractères spéciaux (!$@%).</string>
    <string name="confirmation_password">Confirmation du mot de passe</string>
    <string name="confirmation_password_order">Les mots de passe doivent correspondre.</string>
    <string name="confirmation_change_password_order">Le nouveau mot de passe et la confirmation du mot de passe doivent correspondre.</string>
    <string name="change_password">Changer le mot de passe</string>
    <string name="changed_password">Votre mot de passe a été changé avec succès !</string>
    <string name="account_settings_password">Modifier le mot de passe</string>
    <string name="account_settings_password_order">Assurez-vous de suivre toutes les instructions lors de la création de votre nouveau mot de passe.</string>
    <string name="current_password">Mot de passe actuel</string>
    <string name="current_password_order">Saisissez le mot de passe que vous utilisez actuellement pour vous connecter.</string>
    <string name="save">Enregistrer</string>
    <string name="modified_password">Votre mot de passe a été modifié avec succès !</string>
    <string name="home">Retour à l’acceuil</string>
    <string name="account_settings">Réglages du compte</string>
    <string name="modify_account_settings">Modifier le compte</string>
    <string name="modify_account_settings_order">Vous pouvez modifier votre nom d\'utilisateur, votre email et votre mot de passe.</string>
    <string name="user_name">Nom d\'utilisateur</string>
    <string name="mail">Email</string>
    <string name="password">Mot de passe</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="TV_logout">Log out</string>
    <string name="TV_welcome">Welcome back !</string>
    <string name="TV_user">User</string>
    <string name="TV_setting">Settings</string>
    <string name="TV_help">Guide</string>
    <string name="TV_ongoing">Ongoing treatment</string>

    <string name="Error_SignIn">Error in the information provided</string>
    <string name="edit_your_picture">Edit your picture</string>
    <string name="save_picture">Save</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="terms_of_use_grand">Terms of Use</string>
    <string name="terms_of_use_scan_med">Terms of Use - Scan Med</string>
    <string name="article_1_object">Article 1 : Object</string>
    <string name="these_t_amp_cs_or_general"><![CDATA[These T&Cs or General Conditions of Use legally govern the use of the services of the ScanMed mobile app (hereinafter referred to as “the app”). Constituting the contract between the company ScanMed and the User, access to the app must be preceded by acceptance of these T&Cs. Access to this platform signifies acceptance of these T&Cs.]]></string>
    <string name="article_2_collection_of_data">Article 2 : Collection of data</string>
    <string name="for_the_creation_of_the_user">For the creation of the User\'s account, the collection of information at the time of registration on the app is necessary and obligatory. In accordance with Law No. 78-17 of January 6 relating to information technology, files and freedoms, the collection and processing of personal information is carried out with respect for privacy.</string>

    <string name="cip">CIP</string>
    <string name="scan">Scan</string>
    <string name="file">File</string>
    <string name="title_cipcode">CIP Code</string>
    <string name="select_pharmacy">Select a pharmacy</string>
    <string name="select_hint">Select...</string>
    <string name="enter_cip">Enter a CIP code</string>
    <string name="details_cip">The CIP code or Presentation Identifier Code is a 7 or 13-digit numerical code which allows a presentation (or packaging) of a medicine to be identified.</string>
    <string name="find_cip">Where to find a CIP code ?</string>
    <string name="confirm_cip">Confirm the CIP code</string>
    <string name="confirm_pharmacy">Confirm the pharmacy</string>
    <string name="signalement_envoye">Your report has been sent to the ScanMed administrator!</string>
    <string name="title_signalement">Report sent</string>
    <string name="confirm_report">Confirm the report</string>
    <string name="pharmacy_name">[Pharmacy name]</string>
    <string name="medication_name">[Medication name]</string>
    <string name="send_report">Send the report</string>
    <string name="cancel_report">Cancel the report</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="no_account">You don\'t have an account ?</string>

    <string name="notif">Notifications</string>
    <string name="notifPush">Notifications Push</string>
    <string name="notifmail">Notifications par email</string>
    <string name="info">Informations</string>
    <string name="CGU">CGU</string>

    <string name="settings">Réglages</string>
    <string name="delete_account">Supprimer le compte</string>
    <string name="language">Langue</string>
    <string name="download">Téléchargez vos données</string>
    <string name="page_login">Log in</string>
    <string name="report_history">Historique des signalements</string>
    <string name="token">Entrez le code reçu par mail</string>


</resources>