<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ResetPasswordFragment">

    <ImageButton
        android:id="@+id/imageButton2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="48dp"
        android:layout_height="34dp"
        android:layout_margin="10dp"
        android:src="@drawable/arrow_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins"
        android:text="@string/reset_password"
        android:textAlignment="textStart"
        android:textColor="#2E3135"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/reset_password_order"
        android:textAlignment="textStart"
        android:textColor="#5A6068"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/input_text_style"
        android:ems="10"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="10dp"
        android:hint="@string/mail_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:selectAllOnFocus="false"
        android:singleLine="false" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:layout_above="@+id/buttonReset"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/poppins"
            android:text="@string/remember_password"
            android:textAlignment="textStart"
            android:textColor="#999999"
            android:textSize="13sp" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonReset"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#3054EB"
            android:textSize="13sp" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/classic_button"
            android:fontFamily="@font/poppins"
            android:text="@string/ask_reset_password"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </RelativeLayout>

</LinearLayout>