<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:anrdroid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/account_settings_password"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins"
        android:text="@string/account_settings_password"
        android:textAlignment="textStart"
        android:textColor="#2E3135"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/account_settings_password_order"
        android:textAlignment="textStart"
        android:textColor="#5A6068"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins"
        android:text="@string/current_password"
        android:textAlignment="textStart"
        android:textColor="#5A6068"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_text_style"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:ignore="DuplicateIds" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/poppins"
        android:text="@string/current_password_order"
        android:textAlignment="textStart"
        android:textColor="#5A6068"
        android:textSize="10sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins"
        android:text="@string/new_password"
        android:textAlignment="textStart"
        android:textColor="#5A6068"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmailAddress8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_text_style"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:ignore="DuplicateIds" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/poppins"
        android:text="@string/new_password_order"
        android:textAlignment="textStart"
        android:textColor="#5A6068"
        android:textSize="10sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins"
        android:text="@string/confirmation_password"
        android:textAlignment="textStart"
        android:textColor="#5A6068"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmailAddress9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_text_style"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/confirmation_change_password_order"
        android:textAlignment="textStart"
        android:textColor="#5A6068"
        android:textSize="10sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/buttonResetPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/classic_button"
            android:fontFamily="@font/poppins"
            android:text="@string/save"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
    </RelativeLayout>
</LinearLayout>
